--- a/booking-frontend/index.html
+++ b/booking-frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjDH6HuuQZS-s6ByDzYAFRMdMN6QKa8z0&libraries=places"
+      async
+      defer
+    ></script>
   </body>
 </html>
