--- a/booking-frontend/index.html
+++ b/booking-frontend/index.html
@@ -9,10 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjDH6HuuQZS-s6ByDzYAFRMdMN6QKa8z0&libraries=places"
-      async
-      defer
-    ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places"></script>
   </body>
 </html>
